[package]
name = "fleet-hangar"
version = "1.0.0"
description = "Fleet Hangar"
authors = ["Fleet"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "time", "net"] }
dirs = "5"
anyhow = "1"
regex-lite = "0.1"
semver = "1"
serde_yaml = "0.9"
# For serve_tcp_check — fleet listens TLS on 8080 in dev, so a raw TCP
# connect leaves a `TLS handshake error: EOF` line in fleet's log every
# probe. We do a real handshake (accepting any cert; fleet's dev cert
# is self-signed) so the probe is silent.
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
